--- a/src/components/ProfilePicture.astro
+++ b/src/components/ProfilePicture.astro
@@ -10,9 +10,7 @@
 <style>
     .container {
         background: #f6f6f6;
-        width: 250px;
-        height: 250px;
-        position: relative;
+        max-width: 250px;
     }
     .flex-h {
         display: flex;
@@ -25,8 +23,15 @@
         justify-content: center;
     }
     .profile-picture {
-        max-width: 200px;
         border-radius: 50%;
         height: auto;
+        width: 200px;
+        padding: 25px;
+    }
+    @media only screen and (max-width: 700px) {
+        .profile-picture {
+            width: 100px;
+            padding: 10px;
+        }
     }
 </style>
