--- a/src/components/ProfilePicture.astro
+++ b/src/components/ProfilePicture.astro
@@ -32,6 +32,18 @@
         .profile-picture {
             width: 100px;
             padding: 10px;
+            padding-left: 0px;
+        }
+    }
+    @media only screen and (max-width: 500px) {
+        .profile-picture {
+            padding: 10px;
+        }
+    }
+    @media only screen and (max-width: 400px) {
+        .profile-picture {
+            width: 60px;
+            padding: 5px;
         }
     }
 </style>
