--- a/src/components/ProfileBanner.astro
+++ b/src/components/ProfileBanner.astro
@@ -6,7 +6,6 @@ import ProfilePicture from '../components/ProfilePicture.astro'
     <div class="text-stack">
         <h1 class="header1"><span class="text-gradient">Timo Lausmaa</span></h1>
         <h1 class="header2">Senior Full Stack Developer</h1>
-        <!-- <h3 class="header3">8 years of developer experience</h3> -->
         <div class="contact-details">
             <div>firstname.lastname@gmail.com</div>
             <a href="https://www.linkedin.com/in/timo-lausmaa-68b502155/">LinkedIn</a>
@@ -24,17 +23,16 @@ import ProfilePicture from '../components/ProfilePicture.astro'
         flex-direction: column;
         justify-content: center;
         flex-grow: 1;
+        padding-left: 2rem;
     }
     .header1 {
 		margin: 0;
 		font-size: 3.5rem;
 		font-weight: 800;
-        padding-left: 2rem;
 	}
     .header2, .header3 {
 		margin: 0;
         font-size: 2.5rem;
-        padding-left: 2rem;
         font-weight: lighter;
     }
     .text-gradient {
@@ -45,12 +43,17 @@ import ProfilePicture from '../components/ProfilePicture.astro'
 	}
     .contact-details {
         color: rgb(30, 30, 30);
-        padding-left: 2rem;
         margin-top: 1rem;
         display: flex;
         gap: 1rem;
     }
+    @media only screen and (max-width: 850px) {
+
+    }
     @media only screen and (max-width: 700px) {
+        .container {
+            padding: 0 2rem;
+        }
         .header1 {
             font-size: 2.5rem;
         }
@@ -62,8 +65,27 @@ import ProfilePicture from '../components/ProfilePicture.astro'
         }
     }
     @media only screen and (max-width: 600px) {
+        .text-stack {
+            padding-left: 0rem;
+        }
         .contact-details {
             flex-direction: column;
+        }
+    }
+    @media only screen and (max-width: 500px) {
+        .container {
+            padding: 0;
+        }
+    }
+    @media only screen and (max-width: 450px) {
+        .contact-details {
+            margin-top: 0.5rem;
+        }
+        .header1 {
+            font-size: 2.0rem;
+        }
+        .header2, .header3 {
+            font-size: 1.0rem;
         }
     }
 </style>
