--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -58,11 +58,15 @@ const { title } = Astro.props;
 			display: none;
 		}
 	}
-
 	@media only screen and (max-width: 700px) {
 		.main-content-container {
 			font-size: 1.2rem;
 			line-height: normal;
+		}
+	}
+	@media only screen and (max-width: 500px) {
+		.main-content-container {
+			padding: 0 10px;
 		}
 	}
 </style>
