Increase job title size on mobile

--- a/src/components/ProfileBanner.astro
+++ b/src/components/ProfileBanner.astro
@@ -30,7 +30,7 @@ import ProfilePicture from '../components/ProfilePicture.astro'
 		font-size: 3.5rem;
 		font-weight: 800;
 	}
-    .header2, .header3 {
+    .header2 {
 		margin: 0;
         font-size: 2.5rem;
         font-weight: lighter;
@@ -57,7 +57,7 @@ import ProfilePicture from '../components/ProfilePicture.astro'
         .header1 {
             font-size: 2.5rem;
         }
-        .header2, .header3 {
+        .header2 {
             font-size: 1.5rem;
         }
         .contact-details {
@@ -84,8 +84,8 @@ import ProfilePicture from '../components/ProfilePicture.astro'
         .header1 {
             font-size: 2.0rem;
         }
-        .header2, .header3 {
-            font-size: 1.0rem;
+        .header2 {
+            font-size: 1.25rem;
         }
     }
 </style>
