--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,8 +14,9 @@ const { title } = Astro.props;
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="shortcut icon" type="image/png" href="/favicon.png" />
 		<meta name="generator" content={Astro.generator} />
+		<meta name="theme-color" content="#0068CF" />
+		<link rel="shortcut icon" type="image/png" href="/favicon.png" />
 		<title>{title}</title>
 	</head>
 	<body>
