Update tech in CV

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Layout from '../layouts/Layout.astro';
 	<div class="job-title">Software Developer, <span class="light">Futurice Oy, Helsinki</span></div>
 	<div class="job-details-container">
 		<div class="job-period">August 2022 - present</div>
-		<div class="key-tech">C#, React, Javascript, SQL, GraphQL</div>
+		<div class="key-tech">C#, React, Javascript, SQL, GraphQL, Python</div>
 	</div>
 	<p class="description">Consultant work in the public health care sector.</p>
 	<div class="job-title">Software Developer, Isolta Oy, Helsinki</div>
